# mock-llm

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: build-binaries.yml  publish-ghcr.yml
config/: config.yaml
config/models/: _catalog.yaml  cognition-flash.yaml  cognition-go.yaml  cognition-pro.yaml  cognition-ultra.yaml  llm-flash.yaml  llm-interactive.yaml  llm-pro.yaml  llm-ultra.yaml
config/models/scripts/: init.js
config/scripts/: cognition-ultra.js  example.js  types.d.ts
src/: admin.rs  config.rs  error.rs  handlers.rs  init.rs  interactive.rs  kernel.rs  main.rs  scripting.rs  state.rs  streaming.rs  types.rs  ui.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  i18n.ts  monaco.ts  styles.css
ui/src/components/: AccessScreen.tsx  LoginScreen.tsx  RuleCard.tsx  TokenModal.tsx  YamlEditor.tsx
ui/src/forms/: common.ts  config.ts  model.ts
ui/src/panels/: CatalogPanel.tsx  ConfigPanel.tsx  InteractivePanel.tsx  ModelsPanel.tsx  ScriptsPanel.tsx  StatusPanel.tsx
ui/src/schemas/: catalogSchema.ts  modelSchema.ts
ui/src/validation/: model.ts
