[package]
name = "mock-llm"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
clap = { version = "4.5.57", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["clock"] }
rand = "0.9.2"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
anyhow = "1.0.100"
rquickjs = { version = "0.11.0", features = ["loader"] }
rquickjs-serde = "0.4.0"
regex = "1.12.3"
include_dir = "0.7.4"
mime_guess = "2.0.5"
